# localseek

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  RELEVANCE-PLAYBOOK.md  TODO.md  appshots.yml  pyproject.toml
localseek/: __init__.py  __main__.py  cli.py  config.py  index.py  metrics.py  search.py
localseek/optional/: __init__.py  expand.py  llm_client.py  rerank.py  summarize.py  web_search.py
localseek/web/: __init__.py  server.py
