[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localseek"
version = "0.1.0"
description = "A lightweight, local-first full-text search engine for your documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database :: Database Engines/Servers",
]
keywords = ["search", "full-text-search", "fts5", "sqlite", "local", "cli"]

# No dependencies for core functionality!
dependencies = []

[project.optional-dependencies]
llm = [
    "httpx>=0.25.0",  # For LLM server communication
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "localseek[llm,dev]",
]

[project.scripts]
localseek = "localseek.cli:main"

[project.urls]
Homepage = "https://github.com/caprion/localseek"
Documentation = "https://github.com/caprion/localseek#readme"
Repository = "https://github.com/caprion/localseek.git"
Issues = "https://github.com/caprion/localseek/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["localseek*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["localseek"]
omit = ["tests/*"]
